tests/snapshots/sfc/ts/patches__top_level_await_triggers_async_setup.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"

import { defineComponent as _defineComponent } from 'vue'

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  async setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const value = await Promise.resolve(42)
  const __returned__ = { value }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref($setup.value)), 1 /* TEXT */))
}

__sfc__.render = render
export default __sfc__
