tests/snapshots/sfc/ts/patches__type_comparison_should_not_be_stripped.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { openBlock as _openBlock, createElementBlock as _createElementBlock, normalizeClass as _normalizeClass, unref as _unref } from "vue"

import { defineComponent as _defineComponent } from 'vue'

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  props: {
    type: { type: String, required: true },
  },
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const props = __props
  const isButton = props.type === 'button'
  const __returned__ = { isButton }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return (_openBlock(), _createElementBlock("button", {
    class: _normalizeClass({ active: _unref($setup.isButton) })
  }, "Click", 2 /* CLASS */))
}

__sfc__.render = render
export default __sfc__
