tests/snapshots/sfc/ts/patches__v_if_with_v_bind_spread.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
assertion_line: 150
expression: ts_output
---
import { openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, mergeProps as _mergeProps, unref as _unref } from "vue"

import { defineComponent as _defineComponent } from 'vue'
import MyButton from './MyButton.vue'

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const isActive = true
  const buttonProps = { type: 'primary' }
  const handleClick = () => {}
  const __returned__ = { MyButton, buttonProps, handleClick, isActive }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});

export function render(_ctx, _cache, $props, $setup, $data, $options) {
  return ($setup.isActive)
    ? (_openBlock(), _createBlock($setup.MyButton, _mergeProps(_unref($setup.buttonProps), {
      key: 0,
      onClick: $setup.handleClick
    })}))

__sfc__.render = render
export default __sfc__
